# temporal-go-agent-sdk

./: .copier-answers.truth-ledger.yml  .gitignore  AGENTS.md  CHANGELOG.md  README.md  RESUME.md  go.mod  go.sum
.truth/: claims.jsonl
docs/: .copier-answers.yml  AGENT-CHARTER.md  (+4 more)
projects/assistant-email/: .gitignore  go.mod  go.sum  main.go  pyproject.toml
projects/assistant-email/.data/: memory.sqlite
projects/assistant-email/docs/: brief.md
projects/assistant-email/docs/adr/: ADR-003-anthropic-claude-haiku.md  ADR-004-token-budget-strategy.md  ADR-005-scheduling-strategy.md  README.md
projects/assistant-email/src/email_assistant/: __init__.py  __main__.py  config.py  errors.py  logging_setup.py  pipeline.py
projects/assistant-email/src/email_assistant/agent/: __init__.py  loop.py  prompt.py
projects/assistant-email/src/email_assistant/classify/: __init__.py  urgency.py
projects/assistant-email/src/email_assistant/domain/: __init__.py  email.py
projects/assistant-email/src/email_assistant/gmail/: __init__.py  gmcli_client.py
projects/assistant-email/src/email_assistant/memory/: __init__.py  thread_store.py
projects/assistant-email/src/email_assistant/notify/: __init__.py  formatter.py
projects/assistant-email/src/email_assistant/tools/: __init__.py  base.py  gmail_reader.py  gmail_sender.py
projects/assistant-email/tests/: test_config.py  test_formatter.py  test_gmcli_client.py  test_logging_setup.py  test_pipeline.py  test_thread_store.py  test_tools.py  test_urgency.py
projects/assistant-email/tools/: gmail_reader.go  gmail_sender.go
(+305 files in other folders)
